--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h1 {
 @media (max-width: 600px) and (min-width: 200px) {
   .main {
     width: 80%;
-    height: 750px;
+    height: 660px;
   }
   .next {
     margin-top: 42px;
@@ -106,5 +106,8 @@ h1 {
   .right {
     margin-top: 30px;
     padding-left: 35px;
+  }
+  h1 {
+    font-size: 29px;
   }
 }
